fix(ffe-account-selector-react): Add ellipsis to account name
This commit add extra padding to the input field to also cover the "clear text icon" (an X), and add ellipsis to the account name if it overflows the available space.

DIG-31905

--- a/packages/ffe-account-selector-react/less/base-selector.less
+++ b/packages/ffe-account-selector-react/less/base-selector.less
@@ -1,6 +1,10 @@
 .ffe-base-selector {
     &__input-field {
         width: 100%;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        padding-right: 57px;
         &::-ms-clear {
             display: none;
         }
